[package]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-0 = { alias = "0", problem = "https://atcoder.jp/contests/abc117/tasks/abc117_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-1 = { alias = "1", problem = "https://atcoder.jp/contests/abc074/tasks/abc074_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-10 = { alias = "10", problem = "https://atcoder.jp/contests/abc098/tasks/abc098_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-100 = { alias = "100", problem = "https://atcoder.jp/contests/abc145/tasks/abc145_d" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-101 = { alias = "101", problem = "https://atcoder.jp/contests/cf16-final/tasks/codefestival_2016_final_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-102 = { alias = "102", problem = "https://atcoder.jp/contests/abc110/tasks/abc110_c" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-103 = { alias = "103", problem = "https://atcoder.jp/contests/abc138/tasks/abc138_d" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-104 = { alias = "104", problem = "https://atcoder.jp/contests/abc124/tasks/abc124_d" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-105 = { alias = "105", problem = "https://atcoder.jp/contests/abc121/tasks/abc121_d" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-106 = { alias = "106", problem = "https://atcoder.jp/contests/arc080/tasks/arc080_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-107 = { alias = "107", problem = "https://atcoder.jp/contests/agc018/tasks/agc018_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-11 = { alias = "11", problem = "https://atcoder.jp/contests/abc120/tasks/abc120_c" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-12 = { alias = "12", problem = "https://atcoder.jp/contests/abc179/tasks/abc179_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-13 = { alias = "13", problem = "https://atcoder.jp/contests/abc220/tasks/abc220_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-14 = { alias = "14", problem = "https://atcoder.jp/contests/abc050/tasks/abc050_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-15 = { alias = "15", problem = "https://atcoder.jp/contests/abc183/tasks/abc183_c" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-16 = { alias = "16", problem = "https://atcoder.jp/contests/abc163/tasks/abc163_c" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-17 = { alias = "17", problem = "https://atcoder.jp/contests/abc166/tasks/abc166_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-18 = { alias = "18", problem = "https://atcoder.jp/contests/code-festival-2016-qualc/tasks/codefestival_2016_qualC_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-19 = { alias = "19", problem = "https://atcoder.jp/contests/abc091/tasks/abc091_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-2 = { alias = "2", problem = "https://atcoder.jp/contests/abc087/tasks/abc087_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-20 = { alias = "20", problem = "https://atcoder.jp/contests/abc122/tasks/abc122_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-21 = { alias = "21", problem = "https://atcoder.jp/contests/abc219/tasks/abc219_c" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-22 = { alias = "22", problem = "https://atcoder.jp/contests/abc215/tasks/abc215_c" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-23 = { alias = "23", problem = "https://atcoder.jp/contests/abc175/tasks/abc175_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-24 = { alias = "24", problem = "https://atcoder.jp/contests/abc230/tasks/abc230_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-25 = { alias = "25", problem = "https://atcoder.jp/contests/abc122/tasks/abc122_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-26 = { alias = "26", problem = "https://atcoder.jp/contests/hhkb2020/tasks/hhkb2020_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-27 = { alias = "27", problem = "https://atcoder.jp/contests/abc083/tasks/abc083_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-28 = { alias = "28", problem = "https://atcoder.jp/contests/abc216/tasks/abc216_c" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-29 = { alias = "29", problem = "https://atcoder.jp/contests/abc180/tasks/abc180_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-3 = { alias = "3", problem = "https://atcoder.jp/contests/abc121/tasks/abc121_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-30 = { alias = "30", problem = "https://atcoder.jp/contests/abc204/tasks/abc204_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-31 = { alias = "31", problem = "https://atcoder.jp/contests/abc096/tasks/abc096_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-32 = { alias = "32", problem = "https://atcoder.jp/contests/abc231/tasks/abc231_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-33 = { alias = "33", problem = "https://atcoder.jp/contests/abc086/tasks/abc086_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-34 = { alias = "34", problem = "https://atcoder.jp/contests/abc193/tasks/abc193_c" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-35 = { alias = "35", problem = "https://atcoder.jp/contests/abc103/tasks/abc103_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-36 = { alias = "36", problem = "https://atcoder.jp/contests/arc104/tasks/arc104_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-37 = { alias = "37", problem = "https://atcoder.jp/contests/abc177/tasks/abc177_d" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-38 = { alias = "38", problem = "https://atcoder.jp/contests/abc122/tasks/abc122_c" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-39 = { alias = "39", problem = "https://atcoder.jp/contests/agc015/tasks/agc015_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-4 = { alias = "4", problem = "https://atcoder.jp/contests/abc213/tasks/abc213_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-40 = { alias = "40", problem = "https://atcoder.jp/contests/arc130/tasks/arc130_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-41 = { alias = "41", problem = "https://atcoder.jp/contests/agc029/tasks/agc029_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-42 = { alias = "42", problem = "https://atcoder.jp/contests/abc215/tasks/abc215_d" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-43 = { alias = "43", problem = "https://atcoder.jp/contests/abc204/tasks/abc204_c" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-44 = { alias = "44", problem = "https://atcoder.jp/contests/code-festival-2017-qualc/tasks/code_festival_2017_qualc_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-45 = { alias = "45", problem = "https://atcoder.jp/contests/zone2021/tasks/zone2021_d" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-46 = { alias = "46", problem = "https://atcoder.jp/contests/abc047/tasks/arc063_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-47 = { alias = "47", problem = "https://atcoder.jp/contests/arc080/tasks/arc080_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-48 = { alias = "48", problem = "https://atcoder.jp/contests/abc144/tasks/abc144_d" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-49 = { alias = "49", problem = "https://atcoder.jp/contests/abc129/tasks/abc129_c" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-5 = { alias = "5", problem = "https://atcoder.jp/contests/abc171/tasks/abc171_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-50 = { alias = "50", problem = "https://atcoder.jp/contests/abc230/tasks/abc230_c" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-51 = { alias = "51", problem = "https://atcoder.jp/contests/abc178/tasks/abc178_c" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-52 = { alias = "52", problem = "https://atcoder.jp/contests/abc065/tasks/abc065_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-53 = { alias = "53", problem = "https://atcoder.jp/contests/abc171/tasks/abc171_e" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-54 = { alias = "54", problem = "https://atcoder.jp/contests/keyence2019/tasks/keyence2019_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-55 = { alias = "55", problem = "https://atcoder.jp/contests/arc113/tasks/arc113_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-56 = { alias = "56", problem = "https://atcoder.jp/contests/abc180/tasks/abc180_d" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-57 = { alias = "57", problem = "https://atcoder.jp/contests/arc129/tasks/arc129_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-58 = { alias = "58", problem = "https://atcoder.jp/contests/abc173/tasks/abc173_d" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-59 = { alias = "59", problem = "https://atcoder.jp/contests/arc073/tasks/arc073_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-6 = { alias = "6", problem = "https://atcoder.jp/contests/abc042/tasks/abc042_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-60 = { alias = "60", problem = "https://atcoder.jp/contests/arc108/tasks/arc108_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-61 = { alias = "61", problem = "https://atcoder.jp/contests/arc059/tasks/arc059_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-62 = { alias = "62", problem = "https://atcoder.jp/contests/abc226/tasks/abc226_c" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-63 = { alias = "63", problem = "https://atcoder.jp/contests/jsc2021/tasks/jsc2021_d" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-64 = { alias = "64", problem = "https://atcoder.jp/contests/abc157/tasks/abc157_c" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-65 = { alias = "65", problem = "https://atcoder.jp/contests/agc052/tasks/agc052_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-66 = { alias = "66", problem = "https://atcoder.jp/contests/abc182/tasks/abc182_d" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-67 = { alias = "67", problem = "https://atcoder.jp/contests/abc195/tasks/abc195_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-68 = { alias = "68", problem = "https://atcoder.jp/contests/abc082/tasks/abc082_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-69 = { alias = "69", problem = "https://atcoder.jp/contests/arc114/tasks/arc114_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-7 = { alias = "7", problem = "https://atcoder.jp/contests/abc167/tasks/abc167_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-70 = { alias = "70", problem = "https://atcoder.jp/contests/abc066/tasks/arc077_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-71 = { alias = "71", problem = "https://atcoder.jp/contests/abc064/tasks/abc064_c" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-72 = { alias = "72", problem = "https://atcoder.jp/contests/arc131/tasks/arc131_c" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-73 = { alias = "73", problem = "https://atcoder.jp/contests/agc016/tasks/agc016_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-74 = { alias = "74", problem = "https://atcoder.jp/contests/abc197/tasks/abc197_d" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-75 = { alias = "75", problem = "https://atcoder.jp/contests/agc023/tasks/agc023_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-76 = { alias = "76", problem = "https://atcoder.jp/contests/abc181/tasks/abc181_e" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-77 = { alias = "77", problem = "https://atcoder.jp/contests/abc229/tasks/abc229_e" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-78 = { alias = "78", problem = "https://atcoder.jp/contests/abc194/tasks/abc194_e" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-79 = { alias = "79", problem = "https://atcoder.jp/contests/abc195/tasks/abc195_d" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-8 = { alias = "8", problem = "https://atcoder.jp/contests/abc222/tasks/abc222_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-80 = { alias = "80", problem = "https://atcoder.jp/contests/abc178/tasks/abc178_d" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-81 = { alias = "81", problem = "https://atcoder.jp/contests/arc127/tasks/arc127_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-82 = { alias = "82", problem = "https://atcoder.jp/contests/arc110/tasks/arc110_c" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-83 = { alias = "83", problem = "https://atcoder.jp/contests/arc084/tasks/arc084_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-84 = { alias = "84", problem = "https://atcoder.jp/contests/arc067/tasks/arc067_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-85 = { alias = "85", problem = "https://atcoder.jp/contests/arc066/tasks/arc066_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-86 = { alias = "86", problem = "https://atcoder.jp/contests/agc017/tasks/agc017_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-87 = { alias = "87", problem = "https://atcoder.jp/contests/abc085/tasks/abc085_d" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-88 = { alias = "88", problem = "https://atcoder.jp/contests/abc112/tasks/abc112_d" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-89 = { alias = "89", problem = "https://atcoder.jp/contests/arc116/tasks/arc116_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-9 = { alias = "9", problem = "https://atcoder.jp/contests/abc173/tasks/abc173_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-90 = { alias = "90", problem = "https://atcoder.jp/contests/abc188/tasks/abc188_d" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-91 = { alias = "91", problem = "https://atcoder.jp/contests/code-festival-2017-quala/tasks/code_festival_2017_quala_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-92 = { alias = "92", problem = "https://atcoder.jp/contests/arc119/tasks/arc119_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-93 = { alias = "93", problem = "https://atcoder.jp/contests/abc146/tasks/abc146_d" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-94 = { alias = "94", problem = "https://atcoder.jp/contests/abc094/tasks/arc095_b" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-95 = { alias = "95", problem = "https://atcoder.jp/contests/arc102/tasks/arc102_a" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-96 = { alias = "96", problem = "https://atcoder.jp/contests/abc088/tasks/abc088_d" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-97 = { alias = "97", problem = "https://atcoder.jp/contests/code-festival-2016-quala/tasks/codefestival_2016_qualA_c" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-98 = { alias = "98", problem = "https://atcoder.jp/contests/abc153/tasks/abc153_e" }
contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-99 = { alias = "99", problem = "https://atcoder.jp/contests/abc188/tasks/abc188_e" }

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-0"
path = "src/bin/0.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-1"
path = "src/bin/1.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-10"
path = "src/bin/10.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-100"
path = "src/bin/100.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-101"
path = "src/bin/101.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-102"
path = "src/bin/102.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-103"
path = "src/bin/103.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-104"
path = "src/bin/104.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-105"
path = "src/bin/105.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-106"
path = "src/bin/106.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-107"
path = "src/bin/107.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-11"
path = "src/bin/11.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-12"
path = "src/bin/12.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-13"
path = "src/bin/13.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-14"
path = "src/bin/14.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-15"
path = "src/bin/15.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-16"
path = "src/bin/16.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-17"
path = "src/bin/17.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-18"
path = "src/bin/18.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-19"
path = "src/bin/19.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-2"
path = "src/bin/2.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-20"
path = "src/bin/20.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-21"
path = "src/bin/21.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-22"
path = "src/bin/22.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-23"
path = "src/bin/23.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-24"
path = "src/bin/24.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-25"
path = "src/bin/25.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-26"
path = "src/bin/26.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-27"
path = "src/bin/27.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-28"
path = "src/bin/28.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-29"
path = "src/bin/29.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-3"
path = "src/bin/3.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-30"
path = "src/bin/30.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-31"
path = "src/bin/31.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-32"
path = "src/bin/32.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-33"
path = "src/bin/33.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-34"
path = "src/bin/34.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-35"
path = "src/bin/35.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-36"
path = "src/bin/36.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-37"
path = "src/bin/37.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-38"
path = "src/bin/38.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-39"
path = "src/bin/39.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-4"
path = "src/bin/4.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-40"
path = "src/bin/40.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-41"
path = "src/bin/41.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-42"
path = "src/bin/42.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-43"
path = "src/bin/43.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-44"
path = "src/bin/44.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-45"
path = "src/bin/45.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-46"
path = "src/bin/46.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-47"
path = "src/bin/47.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-48"
path = "src/bin/48.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-49"
path = "src/bin/49.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-5"
path = "src/bin/5.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-50"
path = "src/bin/50.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-51"
path = "src/bin/51.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-52"
path = "src/bin/52.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-53"
path = "src/bin/53.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-54"
path = "src/bin/54.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-55"
path = "src/bin/55.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-56"
path = "src/bin/56.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-57"
path = "src/bin/57.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-58"
path = "src/bin/58.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-59"
path = "src/bin/59.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-6"
path = "src/bin/6.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-60"
path = "src/bin/60.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-61"
path = "src/bin/61.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-62"
path = "src/bin/62.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-63"
path = "src/bin/63.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-64"
path = "src/bin/64.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-65"
path = "src/bin/65.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-66"
path = "src/bin/66.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-67"
path = "src/bin/67.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-68"
path = "src/bin/68.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-69"
path = "src/bin/69.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-7"
path = "src/bin/7.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-70"
path = "src/bin/70.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-71"
path = "src/bin/71.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-72"
path = "src/bin/72.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-73"
path = "src/bin/73.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-74"
path = "src/bin/74.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-75"
path = "src/bin/75.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-76"
path = "src/bin/76.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-77"
path = "src/bin/77.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-78"
path = "src/bin/78.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-79"
path = "src/bin/79.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-8"
path = "src/bin/8.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-80"
path = "src/bin/80.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-81"
path = "src/bin/81.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-82"
path = "src/bin/82.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-83"
path = "src/bin/83.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-84"
path = "src/bin/84.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-85"
path = "src/bin/85.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-86"
path = "src/bin/86.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-87"
path = "src/bin/87.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-88"
path = "src/bin/88.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-89"
path = "src/bin/89.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-9"
path = "src/bin/9.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-90"
path = "src/bin/90.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-91"
path = "src/bin/91.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-92"
path = "src/bin/92.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-93"
path = "src/bin/93.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-94"
path = "src/bin/94.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-95"
path = "src/bin/95.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-96"
path = "src/bin/96.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-97"
path = "src/bin/97.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-98"
path = "src/bin/98.rs"

[[bin]]
name = "contest20c1b9b6-8de8-4468-b01f-bdbc4df5e6e4-99"
path = "src/bin/99.rs"

[dependencies]
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
ndarray = "=0.13.0"
nalgebra = "=0.20.0"
alga = "=0.9.3"
libm = "=0.2.1"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
petgraph = "=0.5.0"
indexmap = "=1.3.2"
regex = "=1.3.6"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.5.3"
im-rc = "=14.3.0"
fixedbitset = "=0.2.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.3.6", features = ["derive"] }
text_io = "=0.1.8"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"

[dev-dependencies]
