[package]
name = "abc032"
version = "0.1.0"
edition = "2021"

# dependencies added to new project
[dependencies]
ac-library-rs = "=0.1.1"
itertools = "=0.11.0"
ordered-float = "=3.7.0"
petgraph = "=0.6.3"
permutohedron = "=0.2.4"
proconio = { version = "=0.4.5", features = ["derive"] }
rand = { version = "=0.8.5", features = ["small_rng"] }
superslice = "=1.0.0"

[profile.release]
lto = true
panic = 'abort'
